--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,65 @@
-colorama==0.4.6
-contourpy==1.0.7
+attrs==22.2.0
 cycler==0.11.0
-exceptiongroup==1.1.1
-fonttools==4.39.4
-importlib-resources==5.12.0
+fonttools==4.39.3
 iniconfig==2.0.0
+ipykernel==6.21.3
+ipython==8.11.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.4
+isort==5.12.0
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+jupyter_server==2.4.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.5
 kiwisolver==1.4.4
 matplotlib==3.7.1
+matplotlib-inline==0.1.6
+nbclassic==0.5.3
+nbclient==0.7.2
+nbconvert==7.2.9
+nbformat==5.7.3
+notebook==6.5.3
+notebook_shim==0.2.2
 numpy==1.23.5
-packaging==23.1
-Pillow==9.5.0
-pluggy==1.0.0
+openpyxl==3.1.2
+packaging==23.0
+pandas==2.0.1
+pandocfilters==1.5.0
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.14.0
+pylint==2.17.4
 pyparsing==3.0.9
+pyproj==3.5.0
+pyrsistent==0.19.3
 pytest==7.3.1
 python-dateutil==2.8.2
-six==1.16.0
+python-docx==0.8.11
+python-gitlab==3.14.0
+python-json-logger==2.0.7
+pywinpty==2.0.10
+PyYAML==5.4.1
+pyzmq==25.0.0
+scipy==1.9.3
+Send2Trash==1.8.0
+shapely==2.0.1
 tomli==2.0.1
+tomlkit==0.11.8
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.9.0
+typing-utils==0.1.0
+typing_extensions==4.5.0
+virtualenv==20.20.0
+wcwidth==0.2.6
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.5.1
+widgetsnbextension==4.0.5
+wrapt==1.15.0
 zipp==3.15.0
