--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,54 @@
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+astroid==2.15.5
+asttokens==2.2.1
 attrs==22.2.0
+backcall==0.2.0
+beautifulsoup4==4.11.2
+black==23.3.0
+bleach==6.0.0
+Cerberus==1.3.3
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+comm==0.1.2
+contourpy==1.0.7
+coreg-tools==0.2.0
+coverage==7.2.7
 cycler==0.11.0
+debugpy==1.6.6
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.6
+distlib==0.3.6
+et-xmlfile==1.1.0
+exceptiongroup==1.1.1
+executing==1.2.0
+fastjsonschema==2.16.3
+filelock==3.9.0
 fonttools==4.39.3
+fqdn==1.5.1
+frozendict==2.3.8
+gitdb==4.0.10
+GitPython==3.1.31
+idna==3.4
 iniconfig==2.0.0
 ipykernel==6.21.3
 ipython==8.11.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.4
+isoduration==20.11.0
 isort==5.12.0
+jedi==0.18.2
+Jinja2==3.1.2
+jsonpointer==2.3
+jsonschema==4.17.3
 jupyter==1.0.0
 jupyter-console==6.6.3
 jupyter-events==0.6.3
@@ -17,12 +59,19 @@ jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.5
 kiwisolver==1.4.4
+lazy-object-proxy==1.9.0
+lxml==4.9.2
+MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
+mccabe==0.7.0
+mistune==2.0.5
+munch==2.5.0
 nbclassic==0.5.3
 nbclient==0.7.2
 nbconvert==7.2.9
 nbformat==5.7.3
+nest-asyncio==1.5.6
 notebook==6.5.3
 notebook_shim==0.2.2
 numpy==1.23.5
@@ -30,24 +79,53 @@ openpyxl==3.1.2
 packaging==23.0
 pandas==2.0.1
 pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.11.1
+pickleshare==0.7.5
+Pillow==9.5.0
+pkgutil_resolve_name==1.3.10
+platformdirs==3.1.0
+pluggy==1.0.0
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+psutil==5.9.4
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.14.0
 pylint==2.17.4
 pyparsing==3.0.9
+pyportal==2.19.0
 pyproj==3.5.0
 pyrsistent==0.19.3
 pytest==7.3.1
+pytest-cov==4.1.0
 python-dateutil==2.8.2
 python-docx==0.8.11
 python-gitlab==3.14.0
 python-json-logger==2.0.7
+python-Levenshtein==0.21.0
+pytz==2023.3
+pywin32==305
 pywinpty==2.0.10
 PyYAML==5.4.1
 pyzmq==25.0.0
+qtconsole==5.4.0
+QtPy==2.3.0
+rapidfuzz==3.0.0
+requests==2.30.0
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+Rtree==1.0.1
 scipy==1.9.3
 Send2Trash==1.8.0
-shapely==2.0.1
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.4
+stack-data==0.6.2
+terminado==0.17.1
+tinycss2==1.2.1
 tomli==2.0.1
 tomlkit==0.11.8
 tornado==6.2
@@ -55,6 +133,9 @@ tqdm==4.65.0
 traitlets==5.9.0
 typing-utils==0.1.0
 typing_extensions==4.5.0
+tzdata==2023.3
+uri-template==1.2.0
+urllib3==2.0.2
 virtualenv==20.20.0
 wcwidth==0.2.6
 webcolors==1.12
