Added pylintrc and set maxline to 120

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,7 @@ jobs:
       - name: Test with Pytest
         run: |
           python -m pytest --cov=inflammation.models tests/test_models.py
+      
+      - name: Check style with Pylint
+        run: |
+          python -m pylint --report=y inflammation
